--- a/ParBST/build.xml
+++ b/ParBST/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="ParBST" default="jar" basedir="./../ParBST">
+<project name="ParBST" default="compile" basedir="./../ParBST">
     <!-- set global properties for this build -->
     <property name="src" value="${basedir}/src"/>
     <property name="build" value="${basedir}/build"/>
@@ -21,17 +21,8 @@
 
     </target>
 
-    <target name="jar" depends="compile">
-        <jar destfile="${basedir}/../ParBST.jar" basedir="${build}">
-            <manifest>
-                <attribute name="Main-Class" value="Program"/>
-            </manifest>
-        </jar>
-    </target>
-
     <target name="clean" description="clean up">
         <!-- Delete the ${build} directory trees -->
         <delete dir="${build}"/>
-        <delete file="${basedir}/../ParBST.jar"/>
     </target>
 </project>
